More work on filtering by location; fixes z-index issue with datepicker arrows

--- a/src/components/EventLocationFilter/EventLocationFilter.sass
+++ b/src/components/EventLocationFilter/EventLocationFilter.sass
@@ -5,7 +5,6 @@
   display: flex
   align-items: center
   position: relative
-  z-index: 1
 
   .toolbar-btn
     display: flex
